tests/ui/derives/issue-97343.stderr
error[E0109]: type arguments are not allowed on type parameter `Irrelevant`
  --> $DIR/issue-97343.rs:4:23
   |
LL | #[derive(Debug)]
   |          -----
   |          |
   |          not allowed on type parameter `Irrelevant`
   |          in this derive macro expansion
LL | pub struct Irrelevant<Irrelevant> {
   |                       ^^^^^^^^^^ type argument not allowed
   |
note: type parameter `Irrelevant` defined here
  --> $DIR/issue-97343.rs:4:23
   |
LL | pub struct Irrelevant<Irrelevant> {
   |                       ^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0109`.
